--- a/style.css
+++ b/style.css
@@ -50,5 +50,27 @@ h1 {
 .day {
     font-size: 20px;
     font-weight: 800;
-    margin: 2px 0; 
+    margin: 2px 0;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 10px;
+    background: #eee;
+    font-size: 20px;
+    transition: 0.2s;
+    list-style-type: none;
+    margin: 3px 0px 0px 0px;
+    font-family: sans-serif;
+    font-weight: normal;
+}
+
+ul li:hover {
+  background: #ddd;
 }
