--- a/style.css
+++ b/style.css
@@ -13,10 +13,14 @@ h1 {
 .weather-container {
     text-align: left;
     margin: 0%;
-    padding: 0px 0px 0px 4px;
-    width: 216px;
+    padding: 5px 0px 0px 15px;
+    width: 100%;
     height: auto;
-    color: black;
+    color: white;
+    background-color: slategray;
+    width: 404px;
+    height: 140px;
+    border-radius: 10px;
 }
 
 .city {
@@ -59,7 +63,7 @@ ul {
 }
 
 ul li {
-    border-radius: 25px;
+    border-radius: 10px;
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 10px;
@@ -67,57 +71,67 @@ ul li {
     font-size: 20px;
     transition: 0.2s;
     list-style-type: none;
-    margin: 3px 0px 0px 0px;
+    margin: 8px 0px 0px 0px;
     font-family: sans-serif;
     font-weight: normal;
     background-color: slategray;
     width: 400px;
-    height: 200px;
+    height: 90px;
 }
 
 ul li:hover {
-    background: #ddd;
+    background: lightgray;
 }
 
 ul li .day {
     background-color: orangered;
     width: 95%;
+    height: 30px;
     margin: auto;
-    border-radius: 20px;
+    font-size: 21px;
     text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     color: white;
 }
 
 ul li .icon {
-    display: block;
-    margin: auto;
-    width: 18%;
-
+    float: right;
+    margin: -10px 10px 0 0;
+    width: 15%;
 }
 
 ul li .weather {
-    background-color: orangered;
-    width: 80%;
+    background-color: lightgray;
+    width: 95%;
+    height: 20px;
     margin: auto;
-    border-radius: 20px;
+    padding: 5px 0 5px;
     text-align: center;
-    color: white;
+    font-weight: bolder;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: orangered;
 }
 
 ul li .temp,
 .feels {
-    margin: 5px 5px 0 5px;
     display: grid;
-    background-color: white;
-    width: 45%;
+    background-color: ;
+    width: 130px;
     border-radius: 20px;
-    text-align: center;
+    text-align: left;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
 }
 
 ul li .temp {
     float: left;
+    margin: 10px 5px 0 10px;
 }
 
 ul li .feels {
-    float: right;
+    float: left;
+    margin: 10px 0px 0 0px;
 }
