--- a/style.css
+++ b/style.css
@@ -11,17 +11,22 @@ h1 {
 }
 
 .weather-container {
+    background: url(cloudsnsun.jpg) no-repeat; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     text-align: left;
     margin: 0%;
     padding: 5px 0px 0px 15px;
     width: 100%;
     height: auto;
     color: white;
-    background-color: slategray;
-    width: 404px;
+    width: 99%;
     height: 140px;
     border-radius: 10px;
 }
+
 
 .city {
     font-size: 25px;
