--- a/style.css
+++ b/style.css
@@ -1,152 +1,146 @@
 html {
-    background-color: lightgray;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+	background-color: lightgray;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 h1 {
-    text-align: center
+	text-align: center
 }
 
 .weather-container {
-    background: url(cloudsnsun.jpg) no-repeat; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-    text-align: left;
-    margin: 0%;
-    padding: 5px 0px 0px 15px;
-    width: 100%;
-    height: auto;
-    color: white;
-    width: 99%;
-    height: 140px;
-    border-radius: 10px;
+	background: url(cloudsnsun.jpg) no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	text-align: left;
+	margin: 0%;
+	padding: 5px 0px 0px 15px;
+	width: 100%;
+	height: auto;
+	color: white;
+	width: 99%;
+	height: 140px;
+	border-radius: 10px;
 }
 
 
 .city {
-    font-size: 25px;
-    font-weight: 800;
-    margin: 0px
+	font-size: 25px;
+	font-weight: 800;
+	margin: 0px
 }
 
 .icon {
-    margin: -10px 0px 0px -5px;
-    padding: 0px;
+	margin: -10px 0px 0px -5px;
+	padding: 0px;
 }
 
 .weather {
-    font-size: 18px;
-    font-weight: bold;
-    margin: -12px 0px 0px 0px;
+	font-size: 18px;
+	font-weight: bold;
+	margin: -12px 0px 0px 0px;
 }
 
 .currentTemp,
 .currentFeels {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 1px 0px;
+	font-size: 18px;
+	font-weight: bold;
+	margin: 1px 0px;
 }
 
 
 .day {
-    font-size: 20px;
-    font-weight: 800;
-    margin: 2px 0;
+	font-size: 20px;
+	font-weight: 800;
+	margin: 2px 0;
 }
 
 /*DIV content inside Button*/
 
 div .dropdown-content {
-    
-    border-radius: 10px;
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 10px;
-    background: #eee;
-    font-size: 20px;
-    transition: 0.2s;
-    list-style-type: none;
-    margin: 8px 0px 0px 0px;
-    font-family: sans-serif;
-    font-weight: normal;
-    background-color: slategray;
-    width: 400px;
-    height: 90px;
+
+	border-radius: 10px;
+	cursor: pointer;
+	position: relative;
+	padding: 12px 8px 12px 10px;
+	background: #eee;
+	font-size: 20px;
+	transition: 0.2s;
+	list-style-type: none;
+	margin: 8px 0px 0px 0px;
+	font-family: sans-serif;
+	font-weight: normal;
+	background-color: slategray;
+	width: 20%;
+	height: 90px;
 }
 
 div .dropdown-content:hover {
-    background: black;
+	background: black;
 }
 
 div .dropdown-content .day {
-    background-color: orangered;
-    width: 95%;
-    height: 30px;
-    margin: auto;
-    font-size: 21px;
-    text-align: center;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    color: white;
+	background-color: orangered;
+	width: 95%;
+	height: 30px;
+	margin: auto;
+	font-size: 21px;
+	text-align: center;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	color: white;
 }
 
 div .dropdown-content .icon {
-    float: right;
-    margin: -10px 10px 0 0;
-    width: 15%;
+	float: right;
+	margin: -10px 10px 0 0;
+	width: 15%;
 }
 
 div .dropdown-content .weather {
-    background-color: lightgray;
-    width: 95%;
-    height: 20px;
-    margin: auto;
-    padding: 5px 0 5px;
-    text-align: center;
-    font-weight: bolder;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    color: orangered;
+	background-color: lightgray;
+	width: 95%;
+	height: 20px;
+	margin: auto;
+	padding: 5px 0 5px;
+	text-align: center;
+	font-weight: bolder;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	color: orangered;
 }
 
 div .dropdown-content .high,
 .low {
-    display: grid;
-    background-color: ;
-    width: 130px;
-    border-radius: 20px;
-    text-align: left;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
+	display: grid;
+	background-color: ;
+	width: 34%;
+	border-radius: 20px;
+	text-align: left;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
 }
 
 div .dropdown-content .high {
-    float: left;
-    margin: 10px 5px 0 10px;
+	float: left;
+	margin: 10px 5px 0 10px;
 }
 
 div .dropdown-content .low {
-    float: left;
-    margin: 10px 0px 0 0px;
+	float: left;
+	margin: 10px 0px 0 0px;
 }
 
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: lightgray;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
- 
-  display: inline-block;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+/* Set the size of the div element that contains the map */
+#map {
+  float: right;
+  height: 604px;  /* The height is 400 pixels */
+  width: 70%;  /* The width is the width of the web page */
+  margin: 0 0.2% 0 0;
+  border-radius: 10px;
+ }
